Created scatter plot.

--- a/Geoff_Wed_Lab7_petals.Rmd
+++ b/Geoff_Wed_Lab7_petals.Rmd
@@ -9,3 +9,12 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+```{r}
+ library(tidyverse)
+iris
+
+ggplot(iris, aes(x = Petal.Length, y = Petal.Width)) +
+  geom_point() +
+  theme_classic()
+```
+
