MAde scatter plot with axes titles and figure title

--- a/Geoff_Wed_Lab7_petals.Rmd
+++ b/Geoff_Wed_Lab7_petals.Rmd
@@ -14,7 +14,8 @@ knitr::opts_chunk$set(echo = TRUE)
 iris
 
 ggplot(iris, aes(x = Petal.Length, y = Petal.Width)) +
-  geom_point() +
+  geom_point(color = "blue") +
+  labs(x = "Petal Length", y = "Petal Width", title = "Petal Width as a Function of Length")
   theme_classic()
 ```
 
